fix SleepMapReduction in case there are no initial states
Analogous to 7c7011cdc. Also, fix MinimalSleepSetReduction#isInitial.